<?xml version="1.0"?>
<package>
  <name>s3000_laser</name>
  <version>0.1.0</version>
  <description>The s3000_laser package</description>

  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="rnavarro@robotnik.es">Roman Navarro Garcia </maintainer>
  <maintainer email="aaliques@robotnik.com">Toni Aliques</maintainer>
  <author email="rnavarro@robotnik.es">Roman Navarro Garcia</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/s3000_laser</url>
  <url type="repository">https://github.com/RobotnikAutomation/s3000_laser.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/s3000_laser/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>self_test</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>self_test</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>

  <export>

  </export>
</package>
